# fst-label-creator

./: .gitignore  README.md  create_QR_codes_script.py  main.py  pyproject.toml
doc/: link_ressources.md
fstlabelcreator/: __init__.py  script_functions.py  utilities.py
tests/: id_list.xlsx  info_Messtechnik_Uebersicht_FST_Wetterich.xlsx  test_fstlabelcreator.py  test_script_functions.py  test_utilities.py
