[tool.poetry]
name = "fstlabelcreator"
version = "0.1.0"
description = ""
authors = ["Sebastian Neumeier <sebastian.neumeier@mail.de>"]
license = { text = "LGPL-3.0-only" }
readme = "README.md"
packages = [{include = "fstlabelcreator"}]

[tool.poetry.dependencies]
python = ">=3.09, <4"
pandas = {extras = ["openpyxl"], version = "^2.0.3"}
openpyxl = "^3.1.2"
reportlab = "^4.0.4"
svglib = "^1.5.1"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
